# mythforge

./: .gitignore  README.md
backend/: .coveragerc  .env.example  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  start.sh
backend/alembic/: env.py  migrations_test.py
backend/alembic/versions/: 20260216_0053_baseline.py  20260217_0054_add_task_created_by_id.py  20260220_0055_add_permission_key_check_constraint.py  20260220_0056_optimize_indexes.py  20260223_0057_initiative_scoped_task_rls.py  20260225_0058_encrypt_sensitive_fields.py  20260225_0059_encrypt_emails.py  20260225_0060_add_uploads_table.py  20260226_0061_add_user_token_version.py  20260226_0062_add_queues.py  20260227_0063_add_initiative_queues_enabled.py  20260228_0064_grant_app_admin_queue_tables.py  20260301_0065_grant_app_admin_uploads_table.py  20260325_0066_add_calendar_events.py  20260330_0067_add_automations_enabled.py  20260331_0068_add_automation_tables.py  20260409_0069_add_whiteboard_document_type.py  20260413_0070_add_task_status_color_icon.py  20260418_0071_add_task_completion_visual_feedback.py  20260419_0072_add_task_completion_audio_haptic_feedback.py  20260421_0073_add_smart_link_document_type.py  20260422_0074_add_property_definitions.py  20260423_0075_add_event_property_values_drop_applies_to.py  20260424_0076_add_user_status_and_rls.py  20260426_0077_drop_automation_tables.py  20260426_0078_soft_delete_mixin_and_rls.py  20260430_0079_add_advanced_tool_enabled.py  (+24 more)
backend/app/: main.py
backend/scripts/: export_openapi.py  test-changed.sh
(+1174 files in other folders)
