[tool.poetry]
name = "forge-backend"
version = "0.1.0"
description = "FastAPI backend for forge project management app"
authors = ["Jordan <jordan@morels.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.135.1,<0.137.0"
uvicorn = { extras = ["standard"], version = ">=0.42,<0.45" }
sqlmodel = "^0.0.38"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.0"
PyJWT = "^2.11.0"
argon2-cffi = "^25.1.0"
bcrypt = "==5.0.0"
pydantic-settings = "^2.3.4"
python-multipart = ">=0.0.24,<0.0.30"
email-validator = "^2.1.1"
httpx = "^0.28.1"
alembic = "^1.14.0"
icalendar = ">=6.0.0"
nh3 = "^0.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"
ruff = ">=0.4.7,<0.16.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
